# glioma

./: .gitignore  pyproject.toml  validated_filtered.csv
brats_mvp/: dataManager.py  dataset.py  main.py  model.py  trainingManager.py  utils.py
notebooks/: examine_masks.ipynb
src/: __init__.py  dataManager.py  dataset.py  diagnose_data.py  main.py  trainingManager.py
visualization/: examine_masks.ipynb
