[project]
name = "glioma"
version = "0.0.1"
description = "Brain tumor segmentation"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "nibabel>=5.3.2",
    "numpy>=2.3.3",
    "pandas>=2.2.3",
    "torch>=2.3.0",
    "tqdm>=4.66.5",
    "torchmetrics>=1.5.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
	"training_data1_v2*",
	"training_data1_v2_filtered*",
]
